# image-recog

./: .gitignore  README.md  SMOLVLM_IMPLEMENTATION.md  logs_summaries.txt  plan.md  pyproject.toml
.claude/: settings.local.json
src/image_rec_mod/: cli.py  extractor.py  local_test.py  main.py  utils.py
src/image_rec_mod/backends/: llm.py  ocr.py  vlm.py
