[tool.poetry]
name = "image-recog"
version = "0.1.0"
description = "A project to extract runner numbers from images."
authors = ["Roo"]
readme = "README.md"
packages = [{include = "image_rec_mod", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pytesseract = ">=0.3.10"
Pillow = ">=9.5.0"
typer = {extras = ["all"], version = ">=0.12.3"}
numpy = ">=1.26.0,<2.0.0"
google-generativeai = ">=0.8.0"
transformers = ">=4.41.2"
qwen-vl-utils = ">=0.0.3"
accelerate = ">=0.30.1"
vllm = ">=0.11.0"
requests = ">=2.32.3"
num2words = ">=0.5.14,<0.6.0"

[[tool.poetry.source]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.scripts]
image-recog = "image_rec_mod.cli:app"
local-test = "image_rec_mod.local_test:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
